--- a/Locks/Locks.csproj
+++ b/Locks/Locks.csproj
@@ -41,8 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BlockingQueue\BlockingQueue2.cs" />
+    <Compile Include="BlockingQueue\BlockingQueue1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleHybridLock.cs" />
     <Compile Include="SimpleSpinLock.cs" />
+    <Compile Include="RecursiveAutoResetEventLock.cs" />
+    <Compile Include="SimpleWaitWithSemaphoreLock.cs" />
     <Compile Include="SimpleWaitLock.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
