rpc服务端逻辑0.5

--- a/SocketClient/SocketClient.csproj
+++ b/SocketClient/SocketClient.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RpcContract\RpcContract.csproj" />
     <ProjectReference Include="..\SocketServer\SocketServer.csproj" />
   </ItemGroup>
 
