--- a/SocketServer/SocketServer.csproj
+++ b/SocketServer/SocketServer.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Buffers" Version="4.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RpcContract\RpcContract.csproj" />
+  </ItemGroup>
+
 </Project>
